Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Development Blog</h1>
-        <p></p>
+        <p>A development blog focussing mainly on web development using ASP.Net</p>
 
 
         <p class="view"><a href="https://github.com/stevekennaird">View My GitHub Profile</a></p>
