--- a/404.html
+++ b/404.html
@@ -23,10 +23,10 @@
 
       </header>
       <section>
-        <h2>Oh snap.</h2>
+        <h2>Uh oh.</h2>
 
 		  <p>That wasn't supposed to happen. Either your chubby fingers have mis-typed a url, or a link you've come across relates to a page that no longer exists.</p>
-		  <p>All I can suggest is going to the home page and searching for the page you were after.</p>
+		  <p>All I can suggest is going to the <a href="/">home page</a> and searching for the page you were after from there.</p>
 
       </section>
       <footer>
