Created new post from about page, updated 404

--- a/404.html
+++ b/404.html
@@ -1,1 +1,2 @@
-Sorry this page does not exist =(
+<h2>Uh oh, you stumbled on a 404 error.</h2>
+<p>Not ideal huh. The only advice I can offer is to <a href="/">go to the home page</a> and look for the content you were after from there.</p>
